Revision history for Perl extension App-Egaz

{{$NEXT}}

0.2.6 2022-03-25T19:33:02Z

    - Move `egaz plottree` to `plotr tree`
    - Remove `egaz masked`, use `faops masked` instead
    - Move tt2 to share/
    - `egaz template`
        - Add `--mash`
        - Add `--fasttree`
        - Apply `nw_order` to trees

0.2.5 2020-03-06T19:07:31Z

    - `egaz template`
        - Use `samtools faidx` to replace `faops region`

0.2.4 2019-09-03T17:49:53Z

    - `egaz template`
        - Use `linkr` from `intspan` to replace `rangeops` and `jrange`
        - Use `spanr` from `intspan` to replace `runlist` and `jrunlist`

0.2.3 2019-01-26T19:01:57Z

    - `egaz plottree`
        - Some spaces above the scale bar

0.2.2 2018-11-26T17:46:32Z

    - `egaz template`
        - Add `--partition`
        - Avoid errors of too many highlights
        - Remove link4
        - Use more jrunlist and jrange
    - `egaz lpcnam`
        - Use `pigz` if available

0.2.1 2018-06-29T11:18:45Z

    - Handle old NCBI fasta headers: `>gi|\d+gb|\d+` or `>gi|\d+ref|\d+`
    - Update flowcharts
    - `egaz template`
        - Add --order
        - Exclude _fasta/ and _raw/

0.2.0 2018-04-24T21:32:24Z

    - `egaz template`
        - Add 7_multi_aligndb.sh
        - Add 7_self_aligndb.sh
        - Add 9_pack_up.sh
        - Store anno.yml and chr_length.csv to Results/
    - `egaz repeatmasker`
        - Try harder to find rmOutToGFF3.pl
    - `egaz prepseq`
        - Simplify headers for sequences in directory
    - `egaz masked`
        - Handle unmasked sequences

0.1.3 2018-04-22T20:03:24Z

    - `egaz template`
        - Add 0_prep.sh
        - and companion options
    - `egaz repeatmasker`
        - Masked files always with suffix of .fa
        - Find rmOutToGFF3.pl and create .rm.gff

0.1.2 2018-04-16T19:39:57Z

    - Create chr.fasta and chr.fasta.fai in `egaz prepseq`
    - Add `egaz fas2vcf`
    - `egaz template`
        - Fix --taxon
        - Symlink chr.fasta in 3_proc_cmd.sh